colima/manifests/coredns-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-external
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: kube-dns
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
    nodePort: ${DNS_NODEPORT}
